Fix or silence various warnings, mostly unchecked and rawtypes